[package]
name = "tux_lockfree"
version = "0.5.1"
authors = ["Bruno Corrêa Zimmermann <brunoczim@gmail.com>"]
description = "This crate provides concurrent data structures and a solution to the ABA problem as an alternative of hazard pointers"
repository = "https://gitlab.com/bzim/lockfree/"
keywords = ["concurrency", "lock-free", "atomics", "data-structures"]
categories = ["concurrency", "data-structures", "algorithms"]
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.60.0"
[dependencies]
owned-alloc = { git = "https://github.com/wyatt-herkamp/tux-owned-alloc.git" }
[features]
default = ["std"]
std = []